fix: align link in move comment

--- a/ui/tree/css/_tree.scss
+++ b/ui/tree/css/_tree.scss
@@ -75,7 +75,7 @@
   }
 
   comment a {
-    vertical-align: top;
+    vertical-align: middle;
   }
 
   comment.truncated {
